# segment-anything-cpp-wrapper

./: .gitignore  CMakeLists.txt  sam.cpp  sam.h  test.cpp
